--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,10 @@ services:
       - "0.0.0.0:30333:30333"
     restart: unless-stopped
     command: [
-      "--chain", "gemini-1",
+      "--chain", "gemini-2a",
       "--base-path", "/var/subspace",
       "--execution", "wasm",
-      "--pruning", "1024",
-      "--keep-blocks", "1024",
+      "--state-pruning", "archive",
       "--port", "30333",
       "--rpc-cors", "all",
       "--rpc-methods", "safe",
